--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body{
   margin: 0;
   padding: 0;
+  
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   box-sizing: border-box;
 }
@@ -15,10 +16,14 @@ body{
   margin-bottom: 2%;
 }
 
+.btn-table {
+  display: flex;
+}
+
 .table {
-  width: fit-content;
   margin-left: auto;
   margin-right: auto;
+  overflow-x: auto;
 }
 
 .table-btn{
